Fixed: ForgeNetworking, Treechop compat, Ore Experience drop